Fixes: - fixed manual filter screen bug where the localized string would be sent to the API instead of the English String - fixed languages moving around when selecting a level for another - added localization for the skills that didn't have one - removed useless skills
Optimizations:
- changed logic for the manual search skill filter widget by breaking it down into smaller widget to reduce rebuilds, thus increasing performance

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -745,6 +745,76 @@
   "hardSkillAiTools": "KI-Tools",
   "hardSkillAutomation": "Automatisierung",
   "hardSkillProcessAutomation": "Prozessautomatisierung",
+  "hardSkillFinancialPrinciples": "Finanzprinzipien",
+  "hardSkillBudgeting": "Budgetierung",
+  "hardSkillForecasting": "Prognosen",
+  "hardSkillFinancialStatements": "Finanzberichte",
+  "hardSkillRoiAnalysis": "ROI-Analyse",
+  "hardSkillEbitda": "EBITDA",
+  "hardSkillProfitMargins": "Gewinnmargen",
+  "hardSkillMarketUnderstanding": "Marktverständnis",
+  "hardSkillConsumerBehavior": "Verbraucherverhalten",
+  "hardSkillMarketSegmentation": "Marktsegmentierung",
+  "hardSkillBrandPositioning": "Markenpositionierung",
+  "hardSkillBrandManagement": "Markenmanagement",
+  "hardSkillEventPlanning": "Veranstaltungsplanung",
+  "hardSkillEventCoordination": "Veranstaltungskoordination",
+  "hardSkillPublicRelations": "Öffentlichkeitsarbeit",
+  "hardSkillGrassrootsOrganizing": "Basisorganisation",
+  "hardSkillGovernmentProcedures": "Regierungsverfahren",
+  "hardSkillPoliticalSystems": "Politische Systeme",
+  "hardSkillAdministrativeLaw": "Verwaltungsrecht",
+  "hardSkillPolicyDevelopment": "Politikentwicklung",
+  "hardSkillProgramDevelopment": "Programmentwicklung",
+  "hardSkillDevOps": "DevOps",
+  "hardSkillCiCd": "CI/CD",
+  "hardSkillEDiscovery": "E-Discovery",
+  "hardSkillLegalWriting": "Juristisches Schreiben",
+  "hardSkillDocumentDrafting": "Dokumentenerstellung",
+  "hardSkillBriefWriting": "Schriftsatzerstellung",
+  "hardSkillLetterWriting": "Briefeschreiben",
+  "hardSkillLitigation": "Prozessführung",
+  "hardSkillCompliance": "Compliance",
+  "hardSkillImmigrationLaw": "Einwanderungsrecht",
+  "hardSkillContractReview": "Vertragsprüfung",
+  "hardSkillRegulatoryCompliance": "Regulatorische Compliance",
+  "hardSkillAerospaceEngineering": "Luft- und Raumfahrttechnik",
+  "hardSkillMechanicalEngineering": "Maschinenbau",
+  "hardSkillCivilEngineering": "Bauingenieurwesen",
+  "hardSkillChemicalEngineering": "Chemieingenieurwesen",
+  "hardSkillComputerEngineering": "Informatik",
+  "hardSkillEnvironmentalEngineering": "Umwelttechnik",
+  "hardSkillGeotechnicalEngineering": "Geotechnik",
+  "hardSkillHydraulicEngineering": "Wasserbau",
+  "hardSkillMaterialsEngineering": "Materialwissenschaften",
+  "hardSkillMiningEngineering": "Bergbau",
+  "hardSkillPetroleumEngineering": "Erdöltechnik",
+  "hardSkillSafetyEngineering": "Sicherheitstechnik",
+  "hardSkillStructuralEngineering": "Statik",
+  "hardSkillElectricalEngineering": "Elektrotechnik",
+  "hardSkillElectronics": "Elektronik",
+  "hardSkillTechnicalWriting": "Technisches Schreiben",
+  "hardSkillDocumentation": "Dokumentation",
+  "hardSkillSpeechwriting": "Redenschreiben",
+  "hardSkillExecutiveCommunications": "Führungskommunikation",
+  "hardSkillInternalCommunications": "Interne Kommunikation",
+  "hardSkillContentWriting": "Content-Erstellung",
+  "hardSkillCopywriting": "Werbetexten",
+  "hardSkillEditing": "Bearbeitung",
+  "hardSkillProofreading": "Korrekturlesen",
+  "hardSkillBlogging": "Bloggen",
+  "hardSkillNewsletterWriting": "Newsletter-Erstellung",
+  "hardSkillGrantWriting": "Antragsstellung",
+  "hardSkillDigitalCataloguing": "Digitale Katalogisierung",
+  "hardSkillCollectionManagement": "Sammlungsverwaltung",
+  "hardSkillEventCurating": "Veranstaltungskuration",
+  "hardSkillExhibitionDesign": "Ausstellungsgestaltung",
+  "hardSkillPortfolioManagement": "Portfoliomanagement",
+  "hardSkillInventoryManagement": "Bestandsverwaltung",
+  "hardSkillQualityAssurance": "Qualitätssicherung",
+  "hardSkillTesting": "Testen",
+  "hardSkillProcessImprovement": "Prozessverbesserung",
+  "hardSkillCommercialUnderstanding": "Kaufmännisches Verständnis",
 
   "expandAll": "Alle Erweitern",
   "collapseAll": "Alle Einklappen",
