--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -802,7 +802,7 @@
     "description": "Indicates user is in quick/short questionnaire mode"
   },
 
-   "softSkillsGroupLeadershipManagement": "Leadership & Management",
+  "softSkillsGroupLeadershipManagement": "Leadership & Management",
   "softSkillsGroupCommunicationInterpersonal": "Communication & Interpersonal",
   "softSkillsGroupTeamworkCollaboration": "Teamwork & Collaboration",
   "softSkillsGroupCognitiveAnalytical": "Cognitive & Analytical",
@@ -936,6 +936,77 @@
   "hardSkillAiTools": "AI Tools",
   "hardSkillAutomation": "Automation",
   "hardSkillProcessAutomation": "Process Automation",
+
+  "hardSkillFinancialPrinciples": "Financial Principles",
+  "hardSkillBudgeting": "Budgeting",
+  "hardSkillForecasting": "Forecasting",
+  "hardSkillFinancialStatements": "Financial Statements",
+  "hardSkillRoiAnalysis": "ROI Analysis",
+  "hardSkillEbitda": "EBITDA",
+  "hardSkillProfitMargins": "Profit Margins",
+  "hardSkillMarketUnderstanding": "Market Understanding",
+  "hardSkillConsumerBehavior": "Consumer Behavior",
+  "hardSkillMarketSegmentation": "Market Segmentation",
+  "hardSkillBrandPositioning": "Brand Positioning",
+  "hardSkillBrandManagement": "Brand Management",
+  "hardSkillEventPlanning": "Event Planning",
+  "hardSkillEventCoordination": "Event Coordination",
+  "hardSkillPublicRelations": "Public Relations",
+  "hardSkillGrassrootsOrganizing": "Grassroots Organizing",
+  "hardSkillGovernmentProcedures": "Government Procedures",
+  "hardSkillPoliticalSystems": "Political Systems",
+  "hardSkillAdministrativeLaw": "Administrative Law",
+  "hardSkillPolicyDevelopment": "Policy Development",
+  "hardSkillProgramDevelopment": "Program Development",
+  "hardSkillDevOps": "DevOps",
+  "hardSkillCiCd": "CI/CD",
+  "hardSkillEDiscovery": "E-Discovery",
+  "hardSkillLegalWriting": "Legal Writing",
+  "hardSkillDocumentDrafting": "Document Drafting",
+  "hardSkillBriefWriting": "Brief Writing",
+  "hardSkillLetterWriting": "Letter Writing",
+  "hardSkillLitigation": "Litigation",
+  "hardSkillCompliance": "Compliance",
+  "hardSkillImmigrationLaw": "Immigration Law",
+  "hardSkillContractReview": "Contract Review",
+  "hardSkillRegulatoryCompliance": "Regulatory Compliance",
+  "hardSkillAerospaceEngineering": "Aerospace Engineering",
+  "hardSkillMechanicalEngineering": "Mechanical Engineering",
+  "hardSkillCivilEngineering": "Civil Engineering",
+  "hardSkillChemicalEngineering": "Chemical Engineering",
+  "hardSkillComputerEngineering": "Computer Engineering",
+  "hardSkillEnvironmentalEngineering": "Environmental Engineering",
+  "hardSkillGeotechnicalEngineering": "Geotechnical Engineering",
+  "hardSkillHydraulicEngineering": "Hydraulic Engineering",
+  "hardSkillMaterialsEngineering": "Materials Engineering",
+  "hardSkillMiningEngineering": "Mining Engineering",
+  "hardSkillPetroleumEngineering": "Petroleum Engineering",
+  "hardSkillSafetyEngineering": "Safety Engineering",
+  "hardSkillStructuralEngineering": "Structural Engineering",
+  "hardSkillElectricalEngineering": "Electrical Engineering",
+  "hardSkillElectronics": "Electronics",
+  "hardSkillTechnicalWriting": "Technical Writing",
+  "hardSkillDocumentation": "Documentation",
+  "hardSkillSpeechwriting": "Speechwriting",
+  "hardSkillExecutiveCommunications": "Executive Communications",
+  "hardSkillInternalCommunications": "Internal Communications",
+  "hardSkillContentWriting": "Content Writing",
+  "hardSkillCopywriting": "Copywriting",
+  "hardSkillEditing": "Editing",
+  "hardSkillProofreading": "Proofreading",
+  "hardSkillBlogging": "Blogging",
+  "hardSkillNewsletterWriting": "Newsletter Writing",
+  "hardSkillGrantWriting": "Grant Writing",
+  "hardSkillDigitalCataloguing": "Digital Cataloguing",
+  "hardSkillCollectionManagement": "Collection Management",
+  "hardSkillEventCurating": "Event Curating",
+  "hardSkillExhibitionDesign": "Exhibition Design",
+  "hardSkillPortfolioManagement": "Portfolio Management",
+  "hardSkillInventoryManagement": "Inventory Management",
+  "hardSkillQualityAssurance": "Quality Assurance",
+  "hardSkillTesting": "Testing",
+  "hardSkillProcessImprovement": "Process Improvement",
+  "hardSkillCommercialUnderstanding": "Commercial Understanding",
 
   "expandAll": "Expand All",
   "collapseAll": "Collapse All",
