--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -743,6 +743,76 @@
   "hardSkillAiTools": "Herramientas de IA",
   "hardSkillAutomation": "Automatización",
   "hardSkillProcessAutomation": "Automatización de Procesos",
+  "hardSkillFinancialPrinciples": "Principios Financieros",
+  "hardSkillBudgeting": "Presupuestación",
+  "hardSkillForecasting": "Pronósticos",
+  "hardSkillFinancialStatements": "Estados Financieros",
+  "hardSkillRoiAnalysis": "Análisis ROI",
+  "hardSkillEbitda": "EBITDA",
+  "hardSkillProfitMargins": "Márgenes de Beneficio",
+  "hardSkillMarketUnderstanding": "Comprensión del Mercado",
+  "hardSkillConsumerBehavior": "Comportamiento del Consumidor",
+  "hardSkillMarketSegmentation": "Segmentación del Mercado",
+  "hardSkillBrandPositioning": "Posicionamiento de Marca",
+  "hardSkillBrandManagement": "Gestión de Marca",
+  "hardSkillEventPlanning": "Planificación de Eventos",
+  "hardSkillEventCoordination": "Coordinación de Eventos",
+  "hardSkillPublicRelations": "Relaciones Públicas",
+  "hardSkillGrassrootsOrganizing": "Organización de Base",
+  "hardSkillGovernmentProcedures": "Procedimientos Gubernamentales",
+  "hardSkillPoliticalSystems": "Sistemas Políticos",
+  "hardSkillAdministrativeLaw": "Derecho Administrativo",
+  "hardSkillPolicyDevelopment": "Desarrollo de Políticas",
+  "hardSkillProgramDevelopment": "Desarrollo de Programas",
+  "hardSkillDevOps": "DevOps",
+  "hardSkillCiCd": "CI/CD",
+  "hardSkillEDiscovery": "E-Discovery",
+  "hardSkillLegalWriting": "Redacción Jurídica",
+  "hardSkillDocumentDrafting": "Redacción de Documentos",
+  "hardSkillBriefWriting": "Redacción de Escritos",
+  "hardSkillLetterWriting": "Redacción de Cartas",
+  "hardSkillLitigation": "Litigios",
+  "hardSkillCompliance": "Cumplimiento",
+  "hardSkillImmigrationLaw": "Derecho de Inmigración",
+  "hardSkillContractReview": "Revisión de Contratos",
+  "hardSkillRegulatoryCompliance": "Cumplimiento Regulatorio",
+  "hardSkillAerospaceEngineering": "Ingeniería Aeroespacial",
+  "hardSkillMechanicalEngineering": "Ingeniería Mecánica",
+  "hardSkillCivilEngineering": "Ingeniería Civil",
+  "hardSkillChemicalEngineering": "Ingeniería Química",
+  "hardSkillComputerEngineering": "Ingeniería Informática",
+  "hardSkillEnvironmentalEngineering": "Ingeniería Ambiental",
+  "hardSkillGeotechnicalEngineering": "Ingeniería Geotécnica",
+  "hardSkillHydraulicEngineering": "Ingeniería Hidráulica",
+  "hardSkillMaterialsEngineering": "Ingeniería de Materiales",
+  "hardSkillMiningEngineering": "Ingeniería Minera",
+  "hardSkillPetroleumEngineering": "Ingeniería Petrolera",
+  "hardSkillSafetyEngineering": "Ingeniería de Seguridad",
+  "hardSkillStructuralEngineering": "Ingeniería Estructural",
+  "hardSkillElectricalEngineering": "Ingeniería Eléctrica",
+  "hardSkillElectronics": "Electrónica",
+  "hardSkillTechnicalWriting": "Redacción Técnica",
+  "hardSkillDocumentation": "Documentación",
+  "hardSkillSpeechwriting": "Redacción de Discursos",
+  "hardSkillExecutiveCommunications": "Comunicaciones Ejecutivas",
+  "hardSkillInternalCommunications": "Comunicaciones Internas",
+  "hardSkillContentWriting": "Redacción de Contenidos",
+  "hardSkillCopywriting": "Copywriting",
+  "hardSkillEditing": "Edición",
+  "hardSkillProofreading": "Corrección de Pruebas",
+  "hardSkillBlogging": "Blogging",
+  "hardSkillNewsletterWriting": "Redacción de Boletines",
+  "hardSkillGrantWriting": "Redacción de Subvenciones",
+  "hardSkillDigitalCataloguing": "Catalogación Digital",
+  "hardSkillCollectionManagement": "Gestión de Colecciones",
+  "hardSkillEventCurating": "Curaduría de Eventos",
+  "hardSkillExhibitionDesign": "Diseño de Exposiciones",
+  "hardSkillPortfolioManagement": "Gestión de Cartera",
+  "hardSkillInventoryManagement": "Gestión de Inventario",
+  "hardSkillQualityAssurance": "Aseguramiento de Calidad",
+  "hardSkillTesting": "Pruebas",
+  "hardSkillProcessImprovement": "Mejora de Procesos",
+  "hardSkillCommercialUnderstanding": "Comprensión comercial",
 
   "expandAll": "Expandir Todo",
   "collapseAll": "Contraer Todo",
