--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -745,6 +745,76 @@
   "hardSkillAiTools": "Outils IA",
   "hardSkillAutomation": "Automatisation",
   "hardSkillProcessAutomation": "Automatisation de Processus",
+  "hardSkillFinancialPrinciples": "Principes Financiers",
+  "hardSkillBudgeting": "Budgétisation",
+  "hardSkillForecasting": "Prévisions",
+  "hardSkillFinancialStatements": "États Financiers",
+  "hardSkillRoiAnalysis": "Analyse du ROI",
+  "hardSkillEbitda": "EBITDA",
+  "hardSkillProfitMargins": "Marges Bénéficiaires",
+  "hardSkillMarketUnderstanding": "Compréhension du Marché",
+  "hardSkillConsumerBehavior": "Comportement du Consommateur",
+  "hardSkillMarketSegmentation": "Segmentation du Marché",
+  "hardSkillBrandPositioning": "Positionnement de Marque",
+  "hardSkillBrandManagement": "Gestion de Marque",
+  "hardSkillEventPlanning": "Planification d'Événements",
+  "hardSkillEventCoordination": "Coordination d'Événements",
+  "hardSkillPublicRelations": "Relations Publiques",
+  "hardSkillGrassrootsOrganizing": "Organisation de Base",
+  "hardSkillGovernmentProcedures": "Procédures Gouvernementales",
+  "hardSkillPoliticalSystems": "Systèmes Politiques",
+  "hardSkillAdministrativeLaw": "Droit Administratif",
+  "hardSkillPolicyDevelopment": "Développement de Politiques",
+  "hardSkillProgramDevelopment": "Développement de Programmes",
+  "hardSkillDevOps": "DevOps",
+  "hardSkillCiCd": "CI/CD",
+  "hardSkillEDiscovery": "E-Discovery",
+  "hardSkillLegalWriting": "Rédaction Juridique",
+  "hardSkillDocumentDrafting": "Rédaction de Documents",
+  "hardSkillBriefWriting": "Rédaction de Mémoires",
+  "hardSkillLetterWriting": "Rédaction de Lettres",
+  "hardSkillLitigation": "Contentieux",
+  "hardSkillCompliance": "Conformité",
+  "hardSkillImmigrationLaw": "Droit de l'Immigration",
+  "hardSkillContractReview": "Révision de Contrats",
+  "hardSkillRegulatoryCompliance": "Conformité Réglementaire",
+  "hardSkillAerospaceEngineering": "Ingénierie Aérospatiale",
+  "hardSkillMechanicalEngineering": "Ingénierie Mécanique",
+  "hardSkillCivilEngineering": "Génie Civil",
+  "hardSkillChemicalEngineering": "Génie Chimique",
+  "hardSkillComputerEngineering": "Ingénierie Informatique",
+  "hardSkillEnvironmentalEngineering": "Ingénierie Environnementale",
+  "hardSkillGeotechnicalEngineering": "Ingénierie Géotechnique",
+  "hardSkillHydraulicEngineering": "Ingénierie Hydraulique",
+  "hardSkillMaterialsEngineering": "Ingénierie des Matériaux",
+  "hardSkillMiningEngineering": "Ingénierie Minière",
+  "hardSkillPetroleumEngineering": "Ingénierie Pétrolière",
+  "hardSkillSafetyEngineering": "Ingénierie de la Sécurité",
+  "hardSkillStructuralEngineering": "Ingénierie Structurelle",
+  "hardSkillElectricalEngineering": "Génie Électrique",
+  "hardSkillElectronics": "Électronique",
+  "hardSkillTechnicalWriting": "Rédaction Technique",
+  "hardSkillDocumentation": "Documentation",
+  "hardSkillSpeechwriting": "Rédaction de Discours",
+  "hardSkillExecutiveCommunications": "Communications Exécutives",
+  "hardSkillInternalCommunications": "Communications Internes",
+  "hardSkillContentWriting": "Rédaction de Contenu",
+  "hardSkillCopywriting": "Copywriting",
+  "hardSkillEditing": "Édition",
+  "hardSkillProofreading": "Relecture",
+  "hardSkillBlogging": "Blogging",
+  "hardSkillNewsletterWriting": "Rédaction de Newsletters",
+  "hardSkillGrantWriting": "Rédaction de Subventions",
+  "hardSkillDigitalCataloguing": "Catalogage Numérique",
+  "hardSkillCollectionManagement": "Gestion de Collections",
+  "hardSkillEventCurating": "Conservation d'Événements",
+  "hardSkillExhibitionDesign": "Conception d'Expositions",
+  "hardSkillPortfolioManagement": "Gestion de Portefeuille",
+  "hardSkillInventoryManagement": "Gestion des Stocks",
+  "hardSkillQualityAssurance": "Assurance Qualité",
+  "hardSkillTesting": "Tests",
+  "hardSkillProcessImprovement": "Amélioration des Processus",
+  "hardSkillCommercialUnderstanding": "Compréhension commerciale",
 
   "expandAll": "Tout Développer",
   "collapseAll": "Tout Réduire",
