--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -744,6 +744,76 @@
   "hardSkillAiTools": "Strumenti IA",
   "hardSkillAutomation": "Automazione",
   "hardSkillProcessAutomation": "Automazione Processi",
+  "hardSkillFinancialPrinciples": "Principi Finanziari",
+  "hardSkillBudgeting": "Budgeting",
+  "hardSkillForecasting": "Previsioni",
+  "hardSkillFinancialStatements": "Bilanci Finanziari",
+  "hardSkillRoiAnalysis": "Analisi ROI",
+  "hardSkillEbitda": "EBITDA",
+  "hardSkillProfitMargins": "Margini di Profitto",
+  "hardSkillMarketUnderstanding": "Comprensione del Mercato",
+  "hardSkillConsumerBehavior": "Comportamento del Consumatore",
+  "hardSkillMarketSegmentation": "Segmentazione del Mercato",
+  "hardSkillBrandPositioning": "Posizionamento del Brand",
+  "hardSkillBrandManagement": "Gestione del Brand",
+  "hardSkillEventPlanning": "Pianificazione Eventi",
+  "hardSkillEventCoordination": "Coordinamento Eventi",
+  "hardSkillPublicRelations": "Relazioni Pubbliche",
+  "hardSkillGrassrootsOrganizing": "Organizzazione di Base",
+  "hardSkillGovernmentProcedures": "Procedure Governative",
+  "hardSkillPoliticalSystems": "Sistemi Politici",
+  "hardSkillAdministrativeLaw": "Diritto Amministrativo",
+  "hardSkillPolicyDevelopment": "Sviluppo Politiche",
+  "hardSkillProgramDevelopment": "Sviluppo Programmi",
+  "hardSkillDevOps": "DevOps",
+  "hardSkillCiCd": "CI/CD",
+  "hardSkillEDiscovery": "E-Discovery",
+  "hardSkillLegalWriting": "Scrittura Legale",
+  "hardSkillDocumentDrafting": "Redazione Documenti",
+  "hardSkillBriefWriting": "Redazione Atti",
+  "hardSkillLetterWriting": "Scrittura Lettere",
+  "hardSkillLitigation": "Contenzioso",
+  "hardSkillCompliance": "Conformità",
+  "hardSkillImmigrationLaw": "Diritto dell'Immigrazione",
+  "hardSkillContractReview": "Revisione Contratti",
+  "hardSkillRegulatoryCompliance": "Conformità Normativa",
+  "hardSkillAerospaceEngineering": "Ingegneria Aerospaziale",
+  "hardSkillMechanicalEngineering": "Ingegneria Meccanica",
+  "hardSkillCivilEngineering": "Ingegneria Civile",
+  "hardSkillChemicalEngineering": "Ingegneria Chimica",
+  "hardSkillComputerEngineering": "Ingegneria Informatica",
+  "hardSkillEnvironmentalEngineering": "Ingegneria Ambientale",
+  "hardSkillGeotechnicalEngineering": "Ingegneria Geotecnica",
+  "hardSkillHydraulicEngineering": "Ingegneria Idraulica",
+  "hardSkillMaterialsEngineering": "Ingegneria dei Materiali",
+  "hardSkillMiningEngineering": "Ingegneria Mineraria",
+  "hardSkillPetroleumEngineering": "Ingegneria Petrolifera",
+  "hardSkillSafetyEngineering": "Ingegneria della Sicurezza",
+  "hardSkillStructuralEngineering": "Ingegneria Strutturale",
+  "hardSkillElectricalEngineering": "Ingegneria Elettrica",
+  "hardSkillElectronics": "Elettronica",
+  "hardSkillTechnicalWriting": "Scrittura Tecnica",
+  "hardSkillDocumentation": "Documentazione",
+  "hardSkillSpeechwriting": "Scrittura Discorsi",
+  "hardSkillExecutiveCommunications": "Comunicazioni Executive",
+  "hardSkillInternalCommunications": "Comunicazioni Interne",
+  "hardSkillContentWriting": "Scrittura Contenuti",
+  "hardSkillCopywriting": "Copywriting",
+  "hardSkillEditing": "Editing",
+  "hardSkillProofreading": "Correzione Bozze",
+  "hardSkillBlogging": "Blogging",
+  "hardSkillNewsletterWriting": "Scrittura Newsletter",
+  "hardSkillGrantWriting": "Scrittura Grant",
+  "hardSkillDigitalCataloguing": "Catalogazione Digitale",
+  "hardSkillCollectionManagement": "Gestione Collezioni",
+  "hardSkillEventCurating": "Curatela Eventi",
+  "hardSkillExhibitionDesign": "Design Esposizioni",
+  "hardSkillPortfolioManagement": "Gestione Portafoglio",
+  "hardSkillInventoryManagement": "Gestione Inventario",
+  "hardSkillQualityAssurance": "Garanzia di Qualità",
+  "hardSkillTesting": "Testing",
+  "hardSkillProcessImprovement": "Miglioramento Processi",
+  "hardSkillCommercialUnderstanding": "Comprensione commerciale",
 
   "expandAll": "Espandi Tutto",
   "collapseAll": "Comprimi Tutto",
