--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -744,6 +744,76 @@
   "hardSkillVisualCommunication": "Visuele Communicatie",
   "hardSkillBrandDesign": "Merkontwerp",
   "hardSkillUiUxDesign": "UI/UX Design",
+  "hardSkillFinancialPrinciples": "Financiële Principes",
+  "hardSkillBudgeting": "Budgetteren",
+  "hardSkillForecasting": "Prognoses",
+  "hardSkillFinancialStatements": "Financiële Overzichten",
+  "hardSkillRoiAnalysis": "ROI-Analyse",
+  "hardSkillEbitda": "EBITDA",
+  "hardSkillProfitMargins": "Winstmarges",
+  "hardSkillMarketUnderstanding": "Marktbegrip",
+  "hardSkillConsumerBehavior": "Consumentengedrag",
+  "hardSkillMarketSegmentation": "Marktsegmentatie",
+  "hardSkillBrandPositioning": "Merkpositionering",
+  "hardSkillBrandManagement": "Merkmanagement",
+  "hardSkillEventPlanning": "Evenementenplanning",
+  "hardSkillEventCoordination": "Evenementencoördinatie",
+  "hardSkillPublicRelations": "Public Relations",
+  "hardSkillGrassrootsOrganizing": "Basisorganisatie",
+  "hardSkillGovernmentProcedures": "Overheidsprocedures",
+  "hardSkillPoliticalSystems": "Politieke Systemen",
+  "hardSkillAdministrativeLaw": "Bestuursrecht",
+  "hardSkillPolicyDevelopment": "Beleidsontwikkeling",
+  "hardSkillProgramDevelopment": "Programmaontwikkeling",
+  "hardSkillDevOps": "DevOps",
+  "hardSkillCiCd": "CI/CD",
+  "hardSkillEDiscovery": "E-Discovery",
+  "hardSkillLegalWriting": "Juridisch Schrijven",
+  "hardSkillDocumentDrafting": "Documentopstelling",
+  "hardSkillBriefWriting": "Processtukken Schrijven",
+  "hardSkillLetterWriting": "Brieven Schrijven",
+  "hardSkillLitigation": "Procesvoering",
+  "hardSkillCompliance": "Compliance",
+  "hardSkillImmigrationLaw": "Immigratierecht",
+  "hardSkillContractReview": "Contractbeoordeling",
+  "hardSkillRegulatoryCompliance": "Regelgevingsnaleving",
+  "hardSkillAerospaceEngineering": "Luchtvaarttechniek",
+  "hardSkillMechanicalEngineering": "Werktuigbouwkunde",
+  "hardSkillCivilEngineering": "Civiele Techniek",
+  "hardSkillChemicalEngineering": "Scheikundige Technologie",
+  "hardSkillComputerEngineering": "Computertechniek",
+  "hardSkillEnvironmentalEngineering": "Milieutechniek",
+  "hardSkillGeotechnicalEngineering": "Geotechniek",
+  "hardSkillHydraulicEngineering": "Waterbouwkunde",
+  "hardSkillMaterialsEngineering": "Materiaalkunde",
+  "hardSkillMiningEngineering": "Mijnbouwtechniek",
+  "hardSkillPetroleumEngineering": "Petroleumtechniek",
+  "hardSkillSafetyEngineering": "Veiligheidstechniek",
+  "hardSkillStructuralEngineering": "Constructietechniek",
+  "hardSkillElectricalEngineering": "Elektrotechniek",
+  "hardSkillElectronics": "Elektronica",
+  "hardSkillTechnicalWriting": "Technisch Schrijven",
+  "hardSkillDocumentation": "Documentatie",
+  "hardSkillSpeechwriting": "Speechschrijven",
+  "hardSkillExecutiveCommunications": "Executive Communicatie",
+  "hardSkillInternalCommunications": "Interne Communicatie",
+  "hardSkillContentWriting": "Content Schrijven",
+  "hardSkillCopywriting": "Copywriting",
+  "hardSkillEditing": "Redactie",
+  "hardSkillProofreading": "Proeflezen",
+  "hardSkillBlogging": "Bloggen",
+  "hardSkillNewsletterWriting": "Nieuwsbrief Schrijven",
+  "hardSkillGrantWriting": "Subsidieaanvragen Schrijven",
+  "hardSkillDigitalCataloguing": "Digitaal Catalogiseren",
+  "hardSkillCollectionManagement": "Collectiebeheer",
+  "hardSkillEventCurating": "Evenement Cureren",
+  "hardSkillExhibitionDesign": "Tentoonstellingsontwerp",
+  "hardSkillPortfolioManagement": "Portfoliobeheer",
+  "hardSkillInventoryManagement": "Voorraadbeheer",
+  "hardSkillQualityAssurance": "Kwaliteitsborging",
+  "hardSkillTesting": "Testen",
+  "hardSkillProcessImprovement": "Procesverbetering",
+  "hardSkillCommercialUnderstanding": "Commercieel inzicht",
 
   "expandAll": "Alles Uitklappen",
   "collapseAll": "Alles Inklappen",
