--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -746,6 +746,77 @@
   "hardSkillAutomation": "Automatizare",
   "hardSkillProcessAutomation": "Automatizare Procese",
 
+  "hardSkillFinancialPrinciples": "Principii Financiare",
+  "hardSkillBudgeting": "Bugetare",
+  "hardSkillForecasting": "Prognoză",
+  "hardSkillFinancialStatements": "Situații Financiare",
+  "hardSkillRoiAnalysis": "Analiză ROI",
+  "hardSkillEbitda": "EBITDA",
+  "hardSkillProfitMargins": "Marje de Profit",
+  "hardSkillMarketUnderstanding": "Înțelegerea Pieței",
+  "hardSkillConsumerBehavior": "Comportamentul Consumatorului",
+  "hardSkillMarketSegmentation": "Segmentarea Pieței",
+  "hardSkillBrandPositioning": "Poziționarea Brandului",
+  "hardSkillBrandManagement": "Managementul Brandului",
+  "hardSkillEventPlanning": "Planificarea Evenimentelor",
+  "hardSkillEventCoordination": "Coordonarea Evenimentelor",
+  "hardSkillPublicRelations": "Relații Publice",
+  "hardSkillGrassrootsOrganizing": "Organizare la Nivel de Bază",
+  "hardSkillGovernmentProcedures": "Proceduri Guvernamentale",
+  "hardSkillPoliticalSystems": "Sisteme Politice",
+  "hardSkillAdministrativeLaw": "Drept Administrativ",
+  "hardSkillPolicyDevelopment": "Dezvoltarea Politicilor",
+  "hardSkillProgramDevelopment": "Dezvoltarea Programelor",
+  "hardSkillDevOps": "DevOps",
+  "hardSkillCiCd": "CI/CD",
+  "hardSkillEDiscovery": "E-Discovery",
+  "hardSkillLegalWriting": "Redactare Juridică",
+  "hardSkillDocumentDrafting": "Redactarea Documentelor",
+  "hardSkillBriefWriting": "Redactarea Memoriilor",
+  "hardSkillLetterWriting": "Redactarea Scrisorilor",
+  "hardSkillLitigation": "Litigii",
+  "hardSkillCompliance": "Conformitate",
+  "hardSkillImmigrationLaw": "Drept de Imigrare",
+  "hardSkillContractReview": "Revizuirea Contractelor",
+  "hardSkillRegulatoryCompliance": "Conformitate Regulatorie",
+  "hardSkillAerospaceEngineering": "Inginerie Aerospațială",
+  "hardSkillMechanicalEngineering": "Inginerie Mecanică",
+  "hardSkillCivilEngineering": "Inginerie Civilă",
+  "hardSkillChemicalEngineering": "Inginerie Chimică",
+  "hardSkillComputerEngineering": "Inginerie Informatică",
+  "hardSkillEnvironmentalEngineering": "Inginerie de Mediu",
+  "hardSkillGeotechnicalEngineering": "Inginerie Geotehnică",
+  "hardSkillHydraulicEngineering": "Inginerie Hidraulică",
+  "hardSkillMaterialsEngineering": "Ingineria Materialelor",
+  "hardSkillMiningEngineering": "Inginerie Minieră",
+  "hardSkillPetroleumEngineering": "Inginerie Petrolieră",
+  "hardSkillSafetyEngineering": "Ingineria Securității",
+  "hardSkillStructuralEngineering": "Inginerie Structurală",
+  "hardSkillElectricalEngineering": "Inginerie Electrică",
+  "hardSkillElectronics": "Electronică",
+  "hardSkillTechnicalWriting": "Redactare Tehnică",
+  "hardSkillDocumentation": "Documentare",
+  "hardSkillSpeechwriting": "Redactarea Discursurilor",
+  "hardSkillExecutiveCommunications": "Comunicări Executive",
+  "hardSkillInternalCommunications": "Comunicări Interne",
+  "hardSkillContentWriting": "Redactare de Conținut",
+  "hardSkillCopywriting": "Copywriting",
+  "hardSkillEditing": "Editare",
+  "hardSkillProofreading": "Corectură",
+  "hardSkillBlogging": "Blogging",
+  "hardSkillNewsletterWriting": "Redactarea Newsletterelor",
+  "hardSkillGrantWriting": "Redactarea Granturilor",
+  "hardSkillDigitalCataloguing": "Catalogare Digitală",
+  "hardSkillCollectionManagement": "Managementul Colecțiilor",
+  "hardSkillEventCurating": "Curatoriat de Evenimente",
+  "hardSkillExhibitionDesign": "Design de Expoziții",
+  "hardSkillPortfolioManagement": "Managementul Portofoliului",
+  "hardSkillInventoryManagement": "Managementul Inventarului",
+  "hardSkillQualityAssurance": "Asigurarea Calității",
+  "hardSkillTesting": "Testare",
+  "hardSkillProcessImprovement": "Îmbunătățirea Proceselor",
+  "hardSkillCommercialUnderstanding": "Înțelegere comercială",
+
   "expandAll": "Extinde Tot",
   "collapseAll": "Restrânge Tot",
 
