Fixes:  - linked the job card report button to the card, now should move with the rotation
Updates:
 - now Swipe will appear in all languages

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -851,5 +851,9 @@
   "reportError": "Fehler beim Melden des Jobs",
   "@reportError": {
     "description": "Error message when job reporting fails"
-  }
+  },
+  "swipe": "Wischen",
+  "search": "Suchen",
+  "saved": "Gespeicherte",
+  "profile": "Profil"
 }
