--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -852,5 +852,10 @@
   "reportError": "Eroare la raportarea jobului",
   "@reportError": {
     "description": "Error message when job reporting fails"
-  }
+  },
+
+  "swipe": "Glisare",
+  "search": "Căutare",
+  "saved": "Salvate",
+  "profile": "Profil"
 }
