Fixes:  - fixed text overflow when the username was too long on the profile header.
Added:
 - button to filter internships by whether they are paid or not in the manual search screen

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -855,5 +855,9 @@
   "swipe": "Wischen",
   "search": "Suchen",
   "saved": "Gespeicherte",
-  "profile": "Profil"
+  "profile": "Profil",
+
+  "jobFiltersInternshipType": "Vergütung",
+  "jobFiltersPaidInternship": "Nur bezahlte Praktika",
+  "jobFiltersPaidInternshipDescription": "Nur Praktika anzeigen, die eine Vergütung bieten"
 }
